--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.5",
     "body-parser": "^2.2.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "tailwindcss": "^4.1.5"
   },
