--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.2",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "tailwindcss": "^4.1.5"
   },
