--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^8.0.2",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.2",
     "mysql": "^2.18.1",
     "tailwindcss": "^4.1.5"
   },
